feat: new finances

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-please-make-it-long-and-random
 COOKIE_SECRET=your-super-secret-cookie-key-change-in-production-please-make-it-long-and-random
 
-# WebAuthn Configuration (update for production)
+# WebAuthn Configuration
+# For local development use localhost, for production use your domain
 RP_NAME=Finance App
-RP_ID=finances.elliott.haus
-ORIGIN=http://finances.elliott.haus
+RP_ID=localhost
+ORIGIN=https://localhost:4200
 
 # Database
 NODE_ENV=development
@@ -14,3 +15,9 @@ NODE_ENV=development
 BCRYPT_ROUNDS=12
 ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_EXPIRY_DAYS=30
+
+# Plaid Configuration
+# Get these from https://dashboard.plaid.com/developers/keys
+PLAID_CLIENT_ID=your-plaid-client-id
+PLAID_SECRET=your-plaid-secret
+PLAID_ENV=sandbox
