--- a/deployments/finances/templates/deployment.yaml
+++ b/deployments/finances/templates/deployment.yaml
@@ -45,6 +45,13 @@ spec:
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
+            {{- range .Values.secretEnv }}
+            - name: {{ .name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .secretName }}
+                  key: {{ .secretKey }}
+            {{- end }}
           volumeMounts:
             - name: data-volume
               mountPath: /app/data
