--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "fastify": "^5.6.2",
