--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,19 +49,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20'
-          cache: 'npm'
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Lint
-        run: npx nx affected -t lint --parallel=3
+        run: bun nx affected -t lint --parallel=3
 
       - name: Build
-        run: npx nx affected -t build --parallel=3
+        run: bun nx affected -t build --parallel=3
 
   build-and-push-dev:
     needs: [check-skip, lint-and-build]
@@ -77,13 +76,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '24.8.0'
-          cache: 'npm'
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Docker Login
         uses: docker/login-action@v3
@@ -94,5 +92,5 @@ jobs:
       - name: Build & Push Development Containers
         run: |
           echo "Building and pushing development containers with 'latest' tag..."
-          npx nx run-many -t container --tag=latest --parallel=3
+          bun nx run-many -t container --tag=latest --parallel=3
           echo "✅ Development containers built and pushed successfully"
