--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -33,14 +33,13 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '24.8.0'
-          cache: 'npm'
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Configure Git
         run: |
@@ -51,9 +50,9 @@ jobs:
         id: prepare
         run: |
           if [ "${{ github.event.inputs.release_type }}" = "prerelease" ]; then
-            npm run release:prepare -- --type=prerelease --preid=${{ github.event.inputs.preid }}
+            bun run release:prepare -- --type=prerelease --preid=${{ github.event.inputs.preid }}
           else
-            npm run release:prepare -- --type=${{ github.event.inputs.release_type }}
+            bun run release:prepare -- --type=${{ github.event.inputs.release_type }}
           fi
         env:
           RELEASE_TYPE: ${{ github.event.inputs.release_type }}
@@ -62,7 +61,7 @@ jobs:
       - name: Update deployment manifests
         run: |
           echo "Updating Helm values.yaml files with new versions..."
-          npm run update:deployments
+          bun run update:deployments
 
       - name: Get version information
         id: version
