chore: arit node

--- a/apps/aritzia-scanner/Dockerfile
+++ b/apps/aritzia-scanner/Dockerfile
@@ -1,5 +1,5 @@
 # Runtime-only Docker image for pre-built aritzia-scanner
-FROM oven/bun:debian
+FROM node:20-slim
 
 # Install Chrome and dependencies for Puppeteer
 RUN apt-get update \
@@ -7,7 +7,7 @@ RUN apt-get update \
     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
     && sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
     && apt-get update \
-    && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-freefont-ttf libxss1 \
+    && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 \
       --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
@@ -20,16 +20,14 @@ WORKDIR /app
 COPY dist/apps/aritzia-scanner .
 
 # Install runtime dependencies (express, puppeteer, sqlite3, etc.)
-RUN bun install --production
+RUN npm install --omit=dev
 
 # Add user so we don't need --no-sandbox
 RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
     && mkdir -p /home/pptruser/Downloads \
-    && mkdir -p /data \
     && chown -R pptruser:pptruser /home/pptruser \
-    && chown -R pptruser:pptruser /app \
-    && chown -R pptruser:pptruser /data
+    && chown -R pptruser:pptruser /app
 
 USER pptruser
 
-CMD ["bun", "run", "main.js"]
+CMD ["node", "main.js"]
