chore: all the HTTP verbs

--- a/deployments/ai-gateway/templates/middleware.yaml
+++ b/deployments/ai-gateway/templates/middleware.yaml
@@ -9,10 +9,14 @@ spec:
   headers:
     accessControlAllowMethods:
       - "GET"
+      - "HEAD"
       - "POST"
       - "PUT"
+      - "PATCH"
       - "DELETE"
+      - "CONNECT"
       - "OPTIONS"
+      - "TRACE"
     accessControlAllowHeaders:
       - "Content-Type"
       - "Authorization"
