feat(ollama): migrate to e-wsl node with GPU support
- Change nodeSelector from e-omni to e-wsl
- Add runtimeClassName: nvidia for GPU access
- Add runtimeClassName support to deployment template

--- a/deployments/ollama/templates/ollama-deployment.yaml
+++ b/deployments/ollama/templates/ollama-deployment.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         {{- include "ollama.selectorLabels" . | nindent 8 }}
     spec:
+      {{- if .Values.ollama.runtimeClassName }}
+      runtimeClassName: {{ .Values.ollama.runtimeClassName }}
+      {{- end }}
       {{- if .Values.ollama.nodeSelector }}
       nodeSelector:
         {{- toYaml .Values.ollama.nodeSelector | nindent 8 }}
