--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "http-errors": "^2.0.0",
     "iconify-icon": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^17.0.1",
     "ng2-charts": "^8.0.0",
     "node-cron": "^4.2.1",
     "pino-pretty": "^13.1.1",
