--- a/deployments/nvidia-gpu-exporter/templates/service.yaml
+++ b/deployments/nvidia-gpu-exporter/templates/service.yaml
@@ -1,16 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: { { include "nvidia-gpu-exporter.fullname" . } }
-  labels: { { - include "nvidia-gpu-exporter.labels" . | nindent 4 } }
+  name: {{ include "nvidia-gpu-exporter.fullname" . }}
+  labels:
+    {{- include "nvidia-gpu-exporter.labels" . | nindent 4 }}
   annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: '{{ .Values.service.port }}'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "{{ .Values.service.port }}"
 spec:
-  type: { { .Values.service.type } }
+  type: {{ .Values.service.type }}
   ports:
-    - port: { { .Values.service.port } }
+    - port: {{ .Values.service.port }}
       targetPort: http-metrics
       protocol: TCP
       name: http-metrics
-  selector: { { - include "nvidia-gpu-exporter.selectorLabels" . | nindent 4 } }
+  selector:
+    {{- include "nvidia-gpu-exporter.selectorLabels" . | nindent 4 }}
