fix: run nvidia-gpu-exporter as privileged for WSL2 /dev/dxg access

--- a/deployments/nvidia-gpu-exporter/templates/daemonset.yaml
+++ b/deployments/nvidia-gpu-exporter/templates/daemonset.yaml
@@ -28,6 +28,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            privileged: true
           ports:
             - name: http-metrics
               containerPort: {{ .Values.service.port }}
