--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@ngrx/signals": "^21.0.0",
     "@nx/angular": "22.3.3",
+    "@primeuix/themes": "^2.0.3",
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
@@ -84,11 +85,13 @@
     "http-errors": "^2.0.0",
     "iconify-icon": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
-    "marked": "^17.0.1",
+    "marked": "^17.0.2",
     "ng2-charts": "^8.0.0",
     "node-cron": "^4.2.1",
     "pino-pretty": "^13.1.1",
     "plaid": "^41.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.1.1",
     "prom-client": "^15.1.3",
     "puppeteer": "^24.34.0",
     "reflect-metadata": "^0.2.2",
