feat(recipes): add puppeteer support to Docker image and bump resources
- Switch Dockerfile from node:lts-alpine to node:20-slim with Chrome installed
- Match aritzia-scanner's puppeteer Docker pattern (pptruser, Chrome stable)
- Set PUPPETEER_EXECUTABLE_PATH for containerized Chrome
- Bump deployment limits: CPU 500m→2, memory 512Mi→1536Mi for Chrome fallback
- Align singleton browser pattern with aritzia-scanner (networkidle0)

--- a/apps/recipes/Dockerfile
+++ b/apps/recipes/Dockerfile
@@ -1,30 +1,42 @@
 # Runtime-only Docker image for pre-built recipes backend
-FROM docker.io/node:lts-alpine
+FROM node:20-slim
 
 ENV HOST=0.0.0.0
 ENV PORT=3000
 ENV CI=true
 
+# Install Chrome and dependencies for Puppeteer (used for URL recipe import fallback)
+RUN apt-get update \
+    && apt-get install -y wget gnupg python3 make g++ \
+    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
+    && sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
+    && apt-get update \
+    && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 \
+      --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
+
 WORKDIR /app
 
-# Install only runtime dependencies for native modules
-RUN apk add --no-cache python3 make g++ libc6-compat
-
-# Create non-root user
-RUN addgroup --system server && \
-    adduser --system -G server server
-
 # Create data directory for database files
-RUN mkdir -p /app/data && chown server:server /app/data
+RUN mkdir -p /app/data
 
 # Copy the pre-built application
-COPY --chown=server:server dist/apps/recipes ./
+COPY dist/apps/recipes ./
 
 # Install runtime dependencies
 RUN npm install --omit=dev
 
+# Add user so we don't need --no-sandbox (matches aritzia-scanner pattern)
+RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
+    && mkdir -p /home/pptruser/Downloads \
+    && chown -R pptruser:pptruser /home/pptruser \
+    && chown -R pptruser:pptruser /app
+
 # Switch to non-root user
-USER server
+USER pptruser
 
 EXPOSE 3000
 
