--- a/deployments/recipes/values.yaml
+++ b/deployments/recipes/values.yaml
@@ -19,11 +19,11 @@ ingress:
 
 resources:
   limits:
-    cpu: 500m
-    memory: 512Mi
+    cpu: 2
+    memory: 1536Mi
   requests:
     cpu: 250m
-    memory: 256Mi
+    memory: 512Mi
 
 env:
   NODE_ENV: 'production'
