fix(recipes): resolve SQLite readonly error and add structured logging
SQLite fix:
- Assign pptruser fixed UID/GID 1001 in Dockerfile for deterministic ownership
- Add init container to deployment that chowns /app/data to 1001:1001
- Fixes SQLITE_READONLY caused by user change from server to pptruser

Logging improvements:
- Enable Pino logger in @ee/starter with env-aware defaults (pino-pretty in
  dev, JSON in production)
- Add configurable logger option to AppConfig
- Create shared logger module for recipes app
- Add structured logging to OllamaClient (request/response timing, tokens)
- Add structured logging to URL import flow (fetch, puppeteer, JSON-LD)
- Replace all console.* calls with structured pino logger
- Add pino as explicit dependency

--- a/apps/recipes/Dockerfile
+++ b/apps/recipes/Dockerfile
@@ -29,8 +29,8 @@ COPY dist/apps/recipes ./
 # Install runtime dependencies
 RUN npm install --omit=dev
 
-# Add user so we don't need --no-sandbox (matches aritzia-scanner pattern)
-RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
+# Add user with fixed UID/GID so we don't need --no-sandbox (matches aritzia-scanner pattern)
+RUN groupadd -r -g 1001 pptruser && useradd -r -u 1001 -g pptruser -G audio,video pptruser \
     && mkdir -p /home/pptruser/Downloads \
     && chown -R pptruser:pptruser /home/pptruser \
     && chown -R pptruser:pptruser /app
