--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "ng2-charts": "^8.0.0",
     "node-cron": "^4.2.1",
     "node-html-parser": "^7.0.2",
+    "pino": "^10.3.1",
     "pino-pretty": "^13.1.1",
     "plaid": "^41.0.0",
     "primeicons": "^7.0.0",
