--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "ag-grid-angular": "^34.1.1",
     "ag-grid-community": "^34.1.1",
     "bcrypt": "^6.0.0",
@@ -74,7 +76,7 @@
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "fastify": "^5.6.2",
@@ -82,6 +84,8 @@
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "hls.js": "^1.6.15",
     "http-errors": "^2.0.0",
     "iconify-icon": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
@@ -90,6 +94,7 @@
     "node-cron": "^4.2.1",
     "node-html-parser": "^7.0.2",
     "pino": "^10.3.1",
+    "onvif": "^0.8.1",
     "pino-pretty": "^13.1.1",
     "plaid": "^41.0.0",
     "primeicons": "^7.0.0",
@@ -98,6 +103,9 @@
     "puppeteer": "^24.34.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.2",
+    "sharp": "^0.34.5",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "sqlite3": "^5.1.7",
     "tslib": "^2.8.1",
     "typeorm": "^0.3.25",
@@ -130,6 +138,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.6",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.0",
