fix(camera): inject ONVIF credentials and fix stream stability
- Inject username/password into ONVIF-discovered RTSP URLs since
  cameras often return URIs without embedded auth
- Add -rtsp_flags prefer_tcp for more reliable RTSP connections
- Reset restart counter at start() instead of inside _startFfmpeg()
  to properly track consecutive restart attempts
- Log all FFmpeg output for better diagnostics
- Update Helm values with correct camera ports (ONVIF 8000, RTSP 8554)
  and RTSP path (/Streaming/Channels/101) for Arenti a3

--- a/deployments/camera/values.yaml
+++ b/deployments/camera/values.yaml
@@ -31,9 +31,9 @@ env:
   PORT: '3000'
   CAMERA_IP: '192.168.86.34'
   CAMERA_MODEL: 'Arenti a3'
-  CAMERA_ONVIF_PORT: '80'
-  CAMERA_RTSP_PORT: '554'
-  CAMERA_RTSP_PATH: '/stream1'
+  CAMERA_ONVIF_PORT: '8000'
+  CAMERA_RTSP_PORT: '8554'
+  CAMERA_RTSP_PATH: '/Streaming/Channels/101'
   DETECTION_INTERVAL: '3'
   DETECTION_THRESHOLD: '0.6'
   DATA_DIR: '/app/data'
