--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,16 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cache bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: bun-${{ runner.os }}-${{ hashFiles('bun.lock') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
+
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
@@ -80,17 +90,41 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cache bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: bun-${{ runner.os }}-${{ hashFiles('bun.lock') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
+
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Check for affected container projects
+        id: check-affected
+        run: |
+          AFFECTED=$(bun nx print-affected -t container 2>/dev/null | grep -o '"[^"]*"' | tr -d '"' || true)
+          if [ -z "$AFFECTED" ]; then
+            echo "has_affected=false" >> $GITHUB_OUTPUT
+            echo "No affected container projects — skipping Docker builds"
+          else
+            echo "has_affected=true" >> $GITHUB_OUTPUT
+            echo "Affected container projects detected"
+          fi
+
       - name: Docker Login
+        if: steps.check-affected.outputs.has_affected == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push Development Containers
+      - name: Build & Push Affected Development Containers
+        if: steps.check-affected.outputs.has_affected == 'true'
         run: |
-          echo "Building and pushing development containers with 'latest' tag..."
-          bun nx run-many -t container --tag=latest --parallel=3
-          echo "✅ Development containers built and pushed successfully"
+          echo "Building and pushing containers for affected projects with 'latest' tag..."
+          bun nx affected -t container --tag=latest --parallel=3
+          echo "✅ Affected development containers built and pushed successfully"
